# mhc

./: .gitmodules  CHANGELOG.md  README.md  mhc.cabal
app/: Main.hs
compiler/: Compiler.hs  Lexer.hs  Parser.hs  Source.hs
compiler/Lexer/: Types.hs  Util.hs
compiler/MHC/: Compiler.hs
compiler/Parser/: ModuleHeader.hs  TreeParser.hs
compiler/Parser/ModuleHeader/: AST.hs
unit-tests/: Main.hs
unit-tests/Test/: Util.hs
unit-tests/Test/Lexer/: Pos.hs
unit-tests/Test/Parser/ModuleHeader/: AST.hs  Pos.hs
unit-tests/lexer/pos/: 000_simple.txt  001_numbers.txt  002_haskell.hs
