cabal-version:
  >=1.10

name:
  mhc
version:
  0.1.0
synopsis:
  Secret project, top-secret
description:
  A very top-secret project, don't look
bug-reports:
  https://github.com/felixmulder/mhc
license:
  BSD3
license-file:
  LICENSE
author:
  Felix Mulder
maintainer:
  felix.mulder@gmail.com
copyright:
  Felix Mulder
category:
  compiler
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable mhc
  main-is:
    Main.hs

  build-depends:
      base        >=4.12  && <4.13
    , compiler

  hs-source-dirs:
    app

  default-language:
    Haskell2010

library compiler
  default-extensions:
    BlockArguments
    DerivingStrategies
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wredundant-constraints -fhide-source-paths -threaded

  exposed-modules:
    Compiler
    Lexer
    Lexer.Util
    Lexer.Types
    Parser
    Parser.ModuleHeader
    Parser.TreeParser
    Source

  build-depends:
      base        >=4.12  && <4.13
    , bytestring  >=0.10  && <0.11
    , comonad     >=5.0   && <5.1
    , exceptions  >=0.10  && <0.11
    , ghc         >=8.6   && <8.7
    , text        >=1.2   && <1.3
    , mtl         >=2.2   && <2.3
    , trifecta    >=2.1   && <2.2
    , parsers     >=0.12  && <0.13

  hs-source-dirs:
    compiler

  default-language:
    Haskell2010

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  default-language:
    Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -Wall -Wredundant-constraints -fhide-source-paths -threaded

  hs-source-dirs:
    unit-tests

  other-modules:
    Test.Lexer.Pos
    Test.Parser.ModuleHeader.Pos
    Test.Util

  default-extensions:
    BlockArguments
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards

  build-depends:
      compiler

    , base        >=4.12  && <4.13
    , bytestring  >=0.10  && <0.11
    , comonad     >=5.0   && <5.1
    , directory   >=1.3   && <1.4
    , hedgehog    >=1.0   && <1.1
    , lens        >=4.18  && <4.19
    , process     >=1.6   && <1.7
    , text        >=1.2   && <1.3
    , trifecta    >=2.1   && <2.2
    , utf8-string >=1.0   && <1.1
